<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:divider="@drawable/top_divider"
    android:showDividers="end"
    android:background="@color/gray_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/list_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/previous_type_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingRight="20dp"
            android:src="@drawable/strength_trainging_icon"
            android:paddingLeft="15dp"
            android:scaleX="0.70"
            android:scaleY="0.70"/>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/previous_type_img">



            <TextView
                android:id="@+id/previous_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/type" />


            <TextView
                android:id="@+id/previous_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#868686"
                android:text="@string/class_date" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/comment_img"
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_marginTop="3dp"
                    android:alpha="0.5"
                    android:src="@drawable/ic_comment"/>

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/add_comment"
                    android:textSize="10dp"
                    android:textColor="#a8a8a8"/>
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/completedOrNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/checkbox"
            android:paddingLeft="14dp"
            android:checked="false"
            android:text="@string/completed_or_not"
            android:textSize="20dp"
            android:textAlignment="@integer/abc_max_action_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#868686"/>

    </RelativeLayout>

</LinearLayout>