<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/class_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/class_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:text="@string/zumba"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/class_duration_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19dp"
                    android:layout_toRightOf="@+id/class_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/img_participants_class_info"
                        android:layout_width="wrap_content"
                        android:layout_height="23dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/people_icon" />

                    <TextView
                        android:id="@+id/number_participants_class_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginRight="3dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/pink"
                        android:textSize="25dp"
                        android:text="0"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal" />

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtube_view"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:id="@+id/class_context"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/view_round_edges"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp">

                    <RatingBar
                        android:id="@+id/sats_rating"
                        style="@style/satsRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="8dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/bookedPersonCount"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/sats_rating"
                            android:layout_gravity="right"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/center_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/class_view_instructor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/class_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp">

                    <TextView
                        android:id="@+id/fitnessCardio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/cardio"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/fitness_bar_cardio"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:progressDrawable="@drawable/customprogressbar" />

                    </LinearLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:id="@+id/fitnessStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/strength"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/fitness_bar_strength"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:progressDrawable="@drawable/customprogressbar" />

                    </LinearLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:id="@+id/fitnessFlexibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/flexibility"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/fitness_bar_flexibility"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:max="100"
                            android:progress="0"
                            android:progressDrawable="@drawable/customprogressbar" />

                    </LinearLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/fitness_bar_balance"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:progressDrawable="@drawable/customprogressbar" />

                    </LinearLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="7dp">

                    <TextView
                        android:id="@+id/agility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agility"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <ProgressBar
                            android:id="@+id/fitness_bar_agility"
                            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:progressDrawable="@drawable/customprogressbar" />

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>